--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body{
     width: 200px;
     height: auto
 }
+
 .selection:hover{
 transform: scale(1.3);}
 .selections{
@@ -23,7 +24,17 @@ transform: scale(1.3);}
     gap: 15px;
     align-items: center;
     justify-content: center;
-    min-height: 20rem;
+    min-height: 200px;
+    margin-top: 1.5rem;
+}
+
+@media screen and (max-width: 762px) {
+  .selection{
+    width: 100px;
+  }
+  .selections{
+    min-height: 100px;
+  }
 }
 .uDisplay{
     width: 200px;
@@ -143,10 +154,11 @@ filter: drop-shadow(0px 0px 40px gold);    }
   width: 10ch;
   font-size: 2rem;
   text-align: center;
-  visibility: hid;
   
 
 }
+
+
 .mode-display{
   width: 20ch;
   margin-bottom: 2rem;
@@ -154,24 +166,98 @@ filter: drop-shadow(0px 0px 40px gold);    }
 
 .b-of-3, .solo{
   width: 20px;
-  display: inline-block;
-  margin-left: .5rem;
-  height: 20px;
+  height: 25px;
+  border: none;
+  background-color: rgb(135, 135, 135);
+  grid-row-start: 1;
+  grid-row-end: 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  cursor: pointer;
 }
 
+.b-of-3{
+  position: relative;
+  top: -.75rem;
+}
+  
+
+.blackline{
+  width: 100%;
+  height: 1px;
+  background-color: rgb(30, 30, 30);
+}
+.solo{
+  visibility: hidden; 
+  position: relative;
+  bottom: -.75rem;
+}
+
+.select-text{
+  display: inline-block;
+  position: relative;  
+  width: 100vw;
+  text-align: center;
+top: 1rem}
+
+.best-of-3-text, .solo-text{
+  margin-left: 1rem;
+}
+
+#text-wrap{
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.light-gray{
+  background-color: #ccc;
+  height: 80px;
+  width: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+.game-mode-wrap{
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  width: 100%;  
+}
 .btn-wrap {
   display: flex;
-  justify-content: flex-start;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  background-color: rgb(68, 68, 68);
+  height: 100px;
+  width: 35px;
+  border-radius: 5px;
+  grid-area: button;
   margin-top: 3rem;
-  margin-left:3rem;
-  background-color: gray;
-  width: 65px;
-  height: 35px;
 }
 
-.b-of-3:c{
+.b-of-3{
   background-color: gray;
+}
+
+@media screen and (max-width: 762px) {
+  .solo, .b-of-3{
+    height: 20px;
+  }
+  .game-mode-wrap{
+    height: 80px;
+  }
+  .btn-wrap{
+    height: 80px;
+  }
+  .light-gray{
+    height: 60px;
+  }
 }
 
 .overlay{
